--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   http: 0.12.2
   audioplayers: ^0.15.1
-  video_player: ^0.10.11+2
+  video_player: ^0.11.0
   intl: ^0.15.0
 
 dev_dependencies:
@@ -24,6 +24,7 @@ flutter:
     - assets/images/FlutterBG.jpg
     - assets/images/FlagUS.jpg
     - assets/video/TimeZonesVid.mp4
+    - assets/audio/favorite.mp3
   fonts:
     - family: ViaodaLibre
       fonts:
